syntax = "proto3";
package presence; // this is for protobuf not go pkg
option go_package="contract/goproto/presence"; // this where the go result files create by protoc

message GetPresenceRequest {
  repeated uint64 user_ids = 1;
}

message GetPresenceResponse {
  repeated GetPresenceItem items = 1;
}

message GetPresenceItem {
  uint64 user_id = 1;
  int64 timestamp = 2;
}

service PresenceService {
  rpc GetPresence(GetPresenceRequest) returns (GetPresenceResponse);
}